Cherry-pick r254996. rdar://problem/58856010

OptimizeAssociativeExpressionTrees should reset value owners before running
    https://bugs.webkit.org/show_bug.cgi?id=206670
    <rdar://problem/58535628>

    Reviewed by Robin Morisset.

    We have a crash inside OptimizeAssociativeExpressionTrees and we don't know
    how to reproduce it. Also, based on Mark's auditing of the crash site's
    assembly, Mark thinks we're crashing on a "currupt" basic block.

    After I audited the code, I saw that we rely on value owners in this phase.
    However, we don't actually reset them before running the phase. This patch
    adds that as a speculative fix for the crash we're seeing.

    * b3/B3OptimizeAssociativeExpressionTrees.cpp:
    (JSC::B3::OptimizeAssociativeExpressionTrees::run):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254996 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255101 268f45cc-cd09-0410-ab3c-d52691b4dbfc